# retro-fighter

./: .gitignore  HOW_TO_GENERATE_IMAGES.md  HOW_TO_GENERATE_V2_SPRITES.md  MIGRATION_PYGBAG.md  NEXT_STEPS.md  README.md  SPECIFICATION.md  main.py  pygbag.ini  pyproject.toml  retro_fighter_v2_blender_sprite_pipeline.md  run_game.py
.github/workflows/: deploy-pygbag-pages.yml
assets/audio/: LICENSE_AUDIO.md  pygame_audio_mapping.json
assets/backgrounds/: LICENSE_BACKGROUNDS.md  arena_manifest.json
assets/backgrounds/docs/: CHANGELOG.md  MANIFEST_SPEC.md  NEXT_ARENA_STEPS.md  PACK_README.md  SHA256SUMS.txt
assets/extension_pack_docs/: FILE_INVENTORY.txt  README.md  extension_pack_manifest.json
assets/extension_pack_docs/crouch_low_attacks/: FILE_INVENTORY.txt  README.md  extension_pack_manifest.json
assets/extension_pack_docs/docs/: ASSET_LIST.md  INTEGRATION_GAMEPLAY.md  MANIFEST_MERGE.md  POSE_CORRECTION_NOTES.md  TUNING_NOTES.md
assets/extension_pack_docs/reference_code/: extension_gameplay_patch.py
assets/fighters/: CONTRACT.md
assets_source/fighters/: PARTS_SPEC.md  README.md
blender/: README.md  animation_defs.py  find_blender.py  make_placeholder_parts.py  parts_spec.py  pipeline.py  rig_config.py  run_pipeline.py
retro_fighter/: ai.py  attacks.py  audio.py  combat_log.py  config.py  fighter.py  game.py  input_manager.py  projectiles.py  renderer.py  sprites.py  stages.py  states.py
scripts/: record_demo.py
tools/sprites/: chroma_key.py  split_grid_parts.py  validate_manifest.py
web_template/: default.tmpl
(+34 files in other folders)
