[project]
name = "retro-fighter"
version = "0.1.0"
description = "Prototype jouable d'un jeu de combat 2D rétro inspiré des bases de Street Fighter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce>=2.5.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
